[+] Initial class instanicate

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sheep Simulator Javascript</title>
+    <script>var exports = {};</script> 
+    <script type="module" src="build/index.js"></script>
 </head>
 <body>
-    
+    <canvas id="field" width="800" height="600">
+        Your browser does not support the HTML5 canvas tag.
+    </canvas>
 </body>
 </html>
