[+] Sheep first setup

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Sheep Simulator Javascript</title>
     <script>var exports = {};</script> 
     <script type="module" src="build/index.js"></script>
+
+    <link rel="stylesheet" href="/css/sheep.css">
 </head>
 <body>
-    <canvas id="field" width="800" height="600">
-        Your browser does not support the HTML5 canvas tag.
-    </canvas>
+    <div id="field">
+        &nbsp;
+    </div>
 </body>
 </html>
