--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sheep Simulator Javascript</title>
     <script>var exports = {};</script> 
-    <script type="module" src="build/index.js"></script>
+    <script type="module" src="./index.js"></script>
 
-    <link rel="stylesheet" href="/css/sheep.css">
+    <link rel="stylesheet" href="./css/sheep.css">
 </head>
 <body>
     <div id="field">
