[+] Style of button and field

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script>var exports = {};</script> 
     <script type="module" src="./index.js"></script>
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/field.css">
     <link rel="stylesheet" href="./css/sheep.css">
 </head>
 <body>
